Refactor controllers and services for enabling API calls to backend
