# controllers/notification/Routes.js
@@ -3,11 +3,11 @@ const router = express.Router()
 const notificationController = require('./NotificationController')
 const notificationRouteHandler = new notificationController()
 
-router.post('/notification/me', notificationRouteHandler.handleInitiateNotify)
-router.get('/notification/all', notificationRouteHandler.fetchAllUserNotifications)
-router.put('/notification/status', notificationRouteHandler.updateNotificationStatus)
-router.get('/notification/unread-count', notificationRouteHandler.fetchUnreadNotifications)
-router.post('/notification/unsubscribe-notification', notificationRouteHandler.unsubscribeNotifications)
+router.post('/me', notificationRouteHandler.handleInitiateNotify)
+router.get('/all', notificationRouteHandler.fetchAllUserNotifications)
+router.put('/status', notificationRouteHandler.updateNotificationStatus)
+router.get('/unread-count', notificationRouteHandler.fetchUnreadNotifications)
+router.post('/unsubscribe-notification', notificationRouteHandler.unsubscribeNotifications)
 router.get('/status/live', notificationRouteHandler.getLivenessStatus)
 router.get('/status/health', notificationRouteHandler.getHealthStatus)
 
