# services/NotificationService.js
@@ -4,22 +4,22 @@ let genericRestService = require('./GenericRestService')
 module.exports = class NotificationService {
 
     constructor() {
-        logger.info("[init] Register NotificationService")
         this.notificationServiceUrl = (process.env.NOTIFICATION_SERVICE_URL || "http://localhost") + "/notification"
         this.genericRestServiceClient = new genericRestService()
-        this.handleInitiateNotifyUrl = this.notificationServiceUrl + "/notification/me"
-        this.fetchAllUserNotificationsUrl = this.notificationServiceUrl + "/notification/all"
-        this.updateNotificationStatusUrl = this.notificationServiceUrl + "/notification/status"
-        this.fetchUnreadNotificationsUrl = this.notificationServiceUrl + "/notification/unread-count"
-        this.unsubscribeNotificationsUrl = this.notificationServiceUrl + "/notification/unsubscribe-notification"
+        this.handleInitiateNotifyUrl = this.notificationServiceUrl + "/me"
+        this.fetchAllUserNotificationsUrl = this.notificationServiceUrl + "/all"
+        this.updateNotificationStatusUrl = this.notificationServiceUrl + "/status"
+        this.fetchUnreadNotificationsUrl = this.notificationServiceUrl + "/unread-count"
+        this.unsubscribeNotificationsUrl = this.notificationServiceUrl + "/unsubscribe-notification"
         this.getLivenessUrl = this.notificationServiceUrl + "/status/live"
         this.getStatusUrl = this.notificationServiceUrl + "/status/health"
+        logger.info(`[init] Register NotificationService at ${this.notificationServiceUrl}`)
     }
 
     async handleInitiateNotify(obj) {
         try {
-            let resp = await this.genericRestServiceClient.post(this.handleInitiateNotifyUrl, obj.body)
-            logger.info("[handleInitiateNotify] resp: ", resp)
+            let resp = await this.genericRestServiceClient.post(this.handleInitiateNotifyUrl, obj.body, obj.headers.authorization)
+            logger.info(`[handleInitiateNotify] resp: ${resp}`)
             return resp
         } catch (error) {
             logger.error(`[handleInitiateNotify] ERROR: ${error}`)
@@ -29,8 +29,8 @@ module.exports = class NotificationService {
 
     async fetchAllUserNotifications(obj) {
         try {
-            let resp = await this.genericRestServiceClient.get(this.fetchAllUserNotificationsUrl + `?user_id=${obj.query.user_id}&all_flag=${obj.query.all_flag}`)
-            logger.info("[fetchAllUserNotifications] resp: ", resp)
+            let resp = await this.genericRestServiceClient.get(this.fetchAllUserNotificationsUrl + `?user_id=${obj.query.user_id}&all_flag=${obj.query.all_flag}`, obj.headers.authorization)
+            logger.info(`[fetchAllUserNotifications] resp: ${resp}`)
             return resp
         } catch (error) {
             logger.error(`[fetchAllUserNotifications] ERROR: ${error}`)
@@ -40,8 +40,8 @@ module.exports = class NotificationService {
 
     async updateNotificationStatus(obj) {
         try {
-            let resp = await this.genericRestServiceClient.put(this.updateNotificationStatusUrl, obj.body)
-            logger.info("[updateNotificationStatus] resp: ", resp)
+            let resp = await this.genericRestServiceClient.put(this.updateNotificationStatusUrl, obj.body, obj.headers.authorization)
+            logger.info(`[updateNotificationStatus] resp: ${resp}`)
             return resp
         } catch (error) {
             logger.error(`[updateNotificationStatus] ERROR: ${error}`)
@@ -51,8 +51,8 @@ module.exports = class NotificationService {
 
     async fetchUnreadNotifications(obj) {
         try {
-            let resp = await this.genericRestServiceClient.get(this.fetchUnreadNotificationsUrl)
-            logger.info("[fetchAllUserNotifications] resp: ", resp)
+            let resp = await this.genericRestServiceClient.get(this.fetchUnreadNotificationsUrl, obj.headers.authorization)
+            logger.info(`[fetchAllUserNotifications] resp: ${resp}`)
             return resp
         } catch (error) {
             logger.error(`[fetchAllUserNotifications] ERROR: ${error}`)
@@ -62,8 +62,8 @@ module.exports = class NotificationService {
 
     async unsubscribeNotifications(obj) {
         try {
-            let resp = await this.genericRestServiceClient.post(this.unsubscribeNotificationsUrl, obj.body)
-            logger.info("[unsubscribeNotifications] resp: ", resp)
+            let resp = await this.genericRestServiceClient.post(this.unsubscribeNotificationsUrl, obj.body, obj.headers.authorization)
+            logger.info(`[unsubscribeNotifications] resp: ${resp}`)
             return resp
         } catch (error) {
             logger.error(`[unsubscribeNotifications] ERROR: ${error}`)
@@ -74,7 +74,7 @@ module.exports = class NotificationService {
     async getLivenessStatus(obj) {
         try {
             let resp = await this.genericRestServiceClient.get(this.getLivenessUrl)
-            logger.info("[getLivenessStatus] resp: ", resp)
+            logger.info(`[getLivenessStatus] resp: ${resp}`)
             return resp
         } catch (error) {
             logger.error(`[getLivenessStatus] ERROR: ${error}`)
@@ -85,7 +85,7 @@ module.exports = class NotificationService {
     async getHealthStatus(obj) {
         try {
             let resp = await this.genericRestServiceClient.get(this.getStatusUrl)
-            logger.info("[getHealthStatus] resp: ", resp)
+            logger.info(`[getHealthStatus] resp: ${resp}`)
             return resp
         } catch (error) {
             logger.error(`[getHealthStatus] ERROR: ${error}`)
